--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello, World!</h1>
     <p>This is a tutorial for Git and GitHub.</p>
+    <!--comely update-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Repellendus totam possimus nisi deserunt delectus. 
+        Consequatur illo quos doloremque. 
+        Ipsa vel natus officiis tenetur distinctio ex veniam aliquam 
+        nam asperiores ab!</p>
+
+    <div class="nav-bar">
+        <ul>
+            <li>Home</li>
+        </ul>
+        
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
