--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         Consequatur illo quos doloremque. 
         Ipsa vel natus officiis tenetur distinctio ex veniam aliquam 
         nam asperiores ab!</p>
+        
+        <ul>
+            <li>Mango</li>
+        </ul>
 
     <div class="nav-bar">
         <ul>
